[package]
name = "hdu"
version = "1.0.0"
edition = "2021"
authors = ["person134"]
description = "A lightweight cross-platform disk usage visualizer for Windows and Linux."
license = "MIT"
repository = "https://github.com/person134/hdu.git"
readme = "README.md"
keywords = ["disk-usage", "storage-analyzer", "wiztree", "cli", "cross-platform"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "6.0"
walkdir = "2"
libc = "0.2"

[[bin]]
name = "hdu"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
